# MLOps-using-ZenML

./: .gitignore  README.md  app.py  commands.txt  direct_predict.py  pyproject.toml  requirements.txt  run_deployment.py  run_pipeline.py
.zen/: config.yaml
docs/: architecture.md  generate_diagram.py
notebooks/: pipeline.ipynb
notebooks/.zen/: config.yaml
pipelines/: deployment_pipeline.py  training_pipeline.py  utils.py
src/: data_cleaning.py  evaluation.py  model_dev.py
steps/: clean_data.py  config.py  evaluation.py  ingest_data.py  model_train.py
